[package]
name = "rlang"
version = "0.0.1"
edition = "2021"

[dependencies]
nom = {version="7.1.0", features=["alloc"], optional = true }
npc = { path="./crates/npc", optional = true }
env_logger = "0.9.0"
rustyline = "9.0.0"
rustyline-derive = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.0.0"

[workspace]
members=["./crates"]

[features]
default = ["nom-parse"]
announce = []
nom-parse = ["nom"]
npc-parse = ["nom"]

